# doper-dapp

./: .gitignore  AppleCMakeLists.cmake  CMakeLists.txt  README.md  Win32CMakeLists.cmake  app_en_US.ts  app_zh_CN.ts  codefileencoding.bat  images.qrc  qml.qrc  theme.qrc
bdlbsc/app/: main.cpp
bdlbsc/module/data/: Data.cpp  Data.h  DataDb.cpp
bdlbsc/module/plugin/: AppPluginManager.h
bdlbsc/module/supper/: IData.h  IMD5Utils.h  IModule.h  IStringUtils.h  ISystemUtils.h  IThreadUtils.h  IUUIDUtils.h  IUtils.h
bdlbsc/module/utils/: StringUtils.cpp  SystemUtils.cpp  SystemUtils.h  ThreadUtils.cpp  UUIDUtils.h  Utils.h
docs/: MACOS 打包.md  Qml 异常.md  RSocket项目编译.md  Toou-2D.md  Visual Studio Code配置.md  Visual Studio 设置编码方式.md  Windows 打包.md  vcpkg跨平台库管理工具.md  代码规范.md  单例模式.md  参考项目.md  扫码登录流程.md  记录Windows错误.md  设计文档.md  错误.md  项目MacOS平台移植.md  项目Ubuntu平台移植.md  项目Windows平台移植.md  项目设计文档.docx  项目运行说明.md
docs/deploy/: setup.iss  欢迎使用.txt  用户协议.txt  许可证.txt
icons/: icon.icns
qml/: About.qml  BaseLoading.qml  EmojiPicker.qml  FieldPassword.qml  FieldUsername.qml  LoginHome.qml  LoginHomeBack.qml  LoginHomePositive.qml  LoginQrCode.qml  MainHome.qml  MainHomeLeftMenu.qml  MainHomeMessage.qml  MainHomeMessageChat.qml  MainHomeMessageChatList.qml  MainHomeMessageChatListItem.qml  MainHomeMessageChatListItemText.qml  MainHomeMessageList.qml  MainWindow.qml  MainWindowTitle.qml  NotificationAddressBook.qml  NotificationAddressBookList.qml  NotificationAddressBookListItem.qml  NotificationHome.qml  NotificationHomeContent.qml  NotificationHomeHeader.qml  NotificationMessage.qml  NotificationMessageList.qml  NotificationMessageListItem.qml  NotificationTask.qml  NotificationTaskList.qml  PasswordField.qml  Setting.qml  Signature.qml  Tray.qml  UsernameField.qml  WindowTitle.qml  main.qml
qml/Base/: NotificationBox.qml
qml/BizComponent/: TPropHeader.qml  TSearchInput.qml  TTreeHeader.qml  TTreeView.qml
qml/Login/: ImageBackColor.qml  Loading.qml  LoginButton.qml  LoginHome.qml  LoginHomeBack.qml  LoginHomeField.qml  LoginHomePositive.qml  LoginQRCode.qml  LoginTitlePage.qml  LoginWindow.qml  LoginWindowHome.qml  LoginWindowTitle.qml
qml/MainControlPanel/: LeftMenuSideBar.qml  Main.qml  MainPanelTitle.qml
qml/MainControlPanel/IM/: RoomList.qml  RoomListItem.qml
qml/MainControlPanel/Menu/: MenuList.qml  MenuList.qml.autosave  MenuListItem.qml
qml/NotificationPanel/: MessageHint.qml  NotificationPanelHome.qml  NotificationPanelHomeHeader.qml  NotificationPanelHomeTitle.qml  Signature.qml  StatusMenu.qml
qml/NotificationPanel/SubPage/: AddressBook.qml  AddressBookItem.qml  AddressBookList.qml  MemberItem.qml  MemberList.qml  Message.qml  MessageList.qml  MessageList.qml.autosave  Organization.qml  TabStyle.qml  Task.qml  TaskItem.qml  TaskList.qml
qml/TreeView/: TreeWidget.qml
qml/appcomponent/: Conversation.qml  ExplorerView.qml  Home.qml  Inform.qml  Login.qml  Plugin.qml  SideBar.qml  Task.qml
sql/: app_sql.sql  mock_sql.sql  mock_sql_data.sql  test_sql.sql
src/: main.cpp
src/TaoJsonModel/: FileReadWrite.h  TaoJsonModel  TaoJsonTreeModel.cpp  TaoJsonTreeModel.h  TaoListModel.h  Tools.h
src/app/: AppInfo.h  AppQuickViewManager.cpp  AppQuickViewManager.h  LoginQuickView.cpp  LoginQuickView.h  MainQuickView.cpp  MainQuickView.h  NotificationQuickView.cpp  NotificationQuickView.h  UIModelProxy.cpp  UIModelProxy.h
src/app/base/: BaseQQuickView.cpp  BaseQQuickView.h
src/component/: DynamicLoadComponent.cpp  DynamicLoadComponent.h
src/config/: __APP_CONFIG__.h
src/conversation/: conversation.cpp  conversation.h
src/data/: CommonData.h  Data.h
src/db/: CertificateBean.cpp  CertificateBean.h  CertificateDB.cpp  CertificateDB.h
src/emoji/: EmojiModel.cpp  EmojiModel.h
src/im/: IM.cpp  IM.h  IMConnectManager.h  IMConnectManagerImpl.cpp  IMConnectManagerImpl.h  IMModel.cpp  IMModel.h  IMProxy.cpp  IMProxy.h  LoginCallBack.cpp  LoginCallBack.h
src/image/: ImageAsyncImageProvider.h  ImageProvider.cpp  ImageProvider.h  QrCodeImageProvider.h
src/inter/callback/: ICallBack.h
src/local/db/: CertificateBean.h  CertificateDB.cpp  CertificateDB.h
src/logger/: Logger.cpp  Logger.h  LoggerTemplate.h
src/login/: LoginHandler.cpp  LoginHandler.h
src/model/: PluginModel.cpp  PluginModel.h
src/model/bean/message/: MessageBeanText.cpp  MessageBeanText.h
src/model/bean/room/: RoomP2PBean.cpp  RoomP2PBean.h
src/model/bean/user/: UserBean.cpp  UserBean.h
src/model/db/mainleftmenu/: MainLeftMenu.cpp  MainLeftMenu.h
src/model/db/message/: MessagTextModel.cpp  MessagTextModel.h  MessageBeanText.cpp  MessageBeanText.h  MessageListModel.cpp  MessageListModel.h  MessageTextModel.cpp  MessageTextModel.h
src/model/db/organization/: OrganizationDepartmentModel.cpp  OrganizationDepartmentModel.h  OrganizationMemberModel.cpp  OrganizationMemberModel.h  OrganizationModel.cpp  OrganizationModel.h
src/model/db/room/: RoomDiscussionGroupModel.cpp  RoomDiscussionGroupModel.h  RoomGroupModel.cpp  RoomGroupModel.h  RoomListModel.cpp  RoomListModel.h  RoomMenberModel.cpp  RoomMenberModel.h  RoomP2PModel.cpp  RoomP2PModel.h  RoomTaskModel.cpp  RoomTaskModel.h
src/model/db/task/: TaskListModel.cpp  TaskListModel.h  TaskModel.cpp  TaskModel.h
src/model/db/user/: UserModel.cpp  UserModel.h
src/net/: NetWorkManager.cpp  NetWorkManager.h
src/networkserver/: HttpRequest.cpp  UdpClient.cpp  UdpServer.cpp
src/panel/: NotificationPanel.cpp  NotificationPanel.h  NotoficationPanel.h
src/plugin/: AppPluginManager.cpp  AppPluginManager.h  Plugin.cpp  Plugin.h
src/proxy/ui/: UIProxy.cpp  UIProxy.h
src/qrimageprovider/: QrCodeImageProvider.h
src/systemfeatures/: Clipboard.cpp  Clipboard.h  ImageClipboard.cpp  ImageClipboard.h
src/tool/: ThreadTool.cpp  ThreadTool.h
src/user/: User.cpp  User.h
src/utils/: MD5.h  MD5Utils.h  SystemUtils.cpp  SystemUtils.h  UUIDUtils.h
themes/Dark/: TButton.ini  TRectangle.ini
